<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="xposed_description">Use features introduced in Android N on devices running Lollipop and Marshmallow!</string>
    <string name="restart_systemui">Restart SystemUI</string>
    <string name="restart_systemui_message">Are you sure you want to restart the SystemUI?</string>
    <string name="restart_broadcast_sent">Restart broadcast sent</string>
    <string name="activity_about">About Android N-ify</string>
    <string name="about_author">Developed by @MrWasdennnoch</string>
    <string name="about_translator">Translated by @MrWasdennnoch</string>
    <string name="about_version">Version %1$s (%2$d)</string>
    <string name="prefs_not_readable"><![CDATA[<b>Warning:</b> The preference file isn\'t readable by Xposed. Click for more info&#8230;]]></string>
    <string name="prefs_not_readable_description"><![CDATA[
        Xposed can\'t read the preference file of this module, default values will be used in hooks.
        There are several ways to fix this problem. Also note that this error pops up if you\'ve never
        opened the app before.<br><br>
        First, reboot the device (No soft reboot!).<br>
        If that doesn\'t help, try reinstalling the module.<br>
        If both attempts fail, ensure that your SELinux mode is set to <i>permissive</i>.
        <i>Enforcing</i> SELinux might block access to the preference file. In order to change the mode,
        use the app <tt>SELinuxModeChanger</tt> that you can download
        <a href="http://forum.xda-developers.com/showthread.php?t=2524485">in this XDA thread</a>.<br>
        If even that fails, you probably have to live with the default values, sorry :(
        ]]></string>
    <string name="automated_build_warning"><![CDATA[
        You\'re running on an automated build. Some parts of the module may break due to new changes.
        If you found any issue, <a href="https://github.com/wasdennnoch/AndroidN-ify/issues/new">open one on GitHub</a> if it doesn\'t already exists.<br><br>
        Remember to always attach Xposed logs when reporting bugs, and logcat in case of crashes.
        ]]></string>
    <string name="experimental_build_warning"><![CDATA[
        You\'re running on an experimental automated build. Some parts of the module may break due to new changes.
        If you found any issue, <a href="https://github.com/wasdennnoch/AndroidN-ify/issues/new">open one on GitHub</a> if it doesn\'t already exists.<br>
        This build contains <b>very experimental</b> features. Please search in XDA and GitHub before reporting any issues. Duplicate reports will be ignored and closed.<br><br>
        Remember to always attach Xposed logs when reporting bugs, and logcat in case of crashes.
        ]]></string>
    <string name="header_tweaks">Tweaks</string>
    <string name="header_app">App</string>
    <string name="app_theme_title">App theme</string>
    <string name="app_theme_light">Light</string>
    <string name="app_theme_dark">Dark</string>
    <string name="app_theme_device">Device Default</string>
    <string name="hide_launcher_icon_title">Hide launcher icon</string>
    <string name="header_settings">Settings</string>
    <string name="enable_settings_summaries_title">Settings summaries</string>
    <string name="enable_settings_summaries">Show the most important information directly in the dashboard</string>
    <string name="fix_sound_notif_tile_title">Fix "Sound &amp; notification" tile</string>
    <string name="fix_sound_notif_tile">Some ROMs combine the Sounds and Notifications tile. Enable to set the proper summary for this tile</string>
    <string name="enable_n_platlogo_title">N logo in easter egg</string>
    <string name="use_namey_mcnameface_title">Use \"Namey McNameface\" icon</string>
    <string name="header_recents">Recents</string>
    <string name="enable_recents_double_tap_title">Quick switch</string>
    <string name="enable_recents_double_tap">Double tap the recents key to switch to the last used app</string>
    <string name="alternative_double_tap_title">Alternative double tap detection</string>
    <string name="alternative_double_tap">Enable if Quick switch isn\'t working correctly</string>
    <string name="double_tap_speed_title">Double tap speed</string>
    <string name="recents_button_behavior_title">Recents button click behavior</string>
    <string name="recents_navigation_delay_title">Navigation delay</string>
    <string name="recents_navigation_delay">Time until the selected app gets focused</string>
    <string name="enable_large_recents">Large recent apps</string>
    <string name="enable_large_recents_summary">Only makes the recents cards full width, doesn\'t change the height</string>
    <string name="no_recents_image">Change \"no recents\" image</string>
    <string name="header_qs">Quick Settings</string>
    <string name="enable_notification_header">Style header</string>
    <string name="keep_bg_title">Unaltered backgrounds</string>
    <string name="keep_bg">Useful for themes that apply custom backgrounds</string>
    <string name="force_old_date_position">Force date next to time</string>
    <string name="force_old_date_position_summary">On screens smaller than a certain size the date gets displayed below the clock instead of next to it, only visible when expanding the QS panel. Enable to override this behavior</string>
    <string name="notification_header_qs_tiles_count">QS tiles to show</string>
    <string name="notification_header_qs_tiles_count_monitor">tiles</string>
    <string name="battery_tile_show_percentage">Show percentage in battery tile</string>
    <string name="battery_tile_show_percentage_summary">Show remaining battery percentage in the battery tile</string>
    <string name="enable_qs_editor">Enable QS editor</string>
    <string name="alternative_qs_loading">Alternative QS loading method</string>
    <string name="alternative_qs_loading_summary">Use a different way to get the available QS tiles. Only use if you are missing tiles in the editor</string>
    <string name="inject_gb_tiles">Inject GravityBox tiles</string>
    <string name="inject_gb_tiles_summary">Enable if you want to add QS tiles provided by GravityBox</string>
    <string name="allow_fancy_qs_transition">Fancy QS transition</string>
    <string name="enable_new_tile_click_behavior">New tile click behavior</string>
    <string name="enable_new_tile_click_behavior_summary">Clicking a tile in header will toggle it and clicking a tile in the panel will expand it</string>
    <string name="enable_large_first_row">Enlarge first row</string>
    <string name="enable_large_first_row_summary2">Makes the first two tiles appear large if supported</string>
    <string name="fix_stuck_inversion_title">Fix stuck inversion</string>
    <string name="fix_stuck_inversion">On some devices the inversion gets stuck when enabled. Click to force deactivation</string>
    <string name="hide_icons_title">Hide header items</string>
    <string name="header_notifications">Notifications</string>
    <string name="notifications_change_style">Style Notifications</string>
    <string name="notification_dismiss_button_title">Change dismiss button</string>
    <string name="notification_dismiss_button">Show \"CLEAR ALL\" instead of dismiss icon</string>
    <string name="notification_blacklisted_apps_title">Blacklisted apps</string>
    <string name="notification_blacklisted_apps">Use old notification style for these apps</string>
    <string name="notifications_custom_actions_color_title">Custom actions background color</string>
    <string name="notifications_custom_actions_color">Use a custom color as the background of the notification buttons</string>
    <string name="notifications_actions_color_title">Actions background color</string>
    <string name="notification_keyguard_change_max_title">Change max notifications on lockscreen</string>
    <string name="notification_keyguard_max_title">Max notifications on lockscreen</string>
    <string name="notification_change_colors_title">Change notification colors to match N</string>
    <string name="notification_change_colors_summary">Disable if using a custom theme</string>
    <string name="enable_assistant">Enable Google Assistant</string>
    <string name="enable_assistant_summary">Replaces Now on Tap/Screen search with the new Google Assistant</string>
    <string name="name">Name</string>
    <string name="unknown_name">Unknown</string>
    <string name="address">Address</string>
    <string name="unknown_address">Unknown</string>
    <string name="blood_type">Blood type</string>
    <string name="unknown_blood_type">Unknown</string>
    <string name="allergies">Allergies</string>
    <string name="unknown_allergies">Unknown</string>
    <string name="allergies_hint">For example, peanuts</string>
    <string name="medications">Medications</string>
    <string name="unknown_medications">Unknown</string>
    <string name="medications_hint">For example, aspirin</string>
    <string name="medical_conditions">Medical notes</string>
    <string name="unknown_medical_conditions">Unknown</string>
    <string name="medical_conditions_hint">For example, asthma</string>
    <string name="organ_donor">Organ donor</string>
    <string name="unknown_organ_donor">Unknown</string>
    <string name="enable_install_source_title">Show app installation source</string>
    <string name="enable_install_source">Adds a category to the app info page to show how the app got installed (Play Store, Package Installer etc)</string>
    <string name="disable_qs_paging">Disable QS paging</string>
    <string name="disable_qs_paging_summary">Disable QS paging in portrait</string>
    <string name="allow_direct_reply_on_keyguard">Direct reply on lockscreen</string>
    <string name="allow_direct_reply_on_keyguard_summary">Allows notifications to be answered on lockscreen</string>
    <string name="enable_notifications_background">Enable notifications background</string>
    <string name="enable_notifications_background_summary">Draws a white background behind notifications when swiping them away</string>
    <string name="enable_data_disabled_indicator">Show mobile data disabled indicator</string>
    <string name="enable_data_disabled_indicator_summary">Shows a \"x\" as the signal indicator when mobile data is disabled</string>
    <string name="header_experimental">Experimental</string>
    <string name="enable_experimental_features">Enable experimental features</string>
    <string name="enable_n_style_settings_dashboard">N style settings</string>
    <string name="enable_n_style_settings_dashboard_summary">Theme the settings dashboard to look like N</string>
    <string name="enable_settings_drawer">Enable settings drawer</string>
    <string name="fix_header_space_title">Fix huge space under qs header</string>
    <string name="reconfigure_notification_panel_title">Reconfigure notification panel layout hierarchy</string>
    <string name="generate_notification_accent_color">Generate notification color from app icon</string>
    <string name="header_others">Others</string>
    <string name="package_installer">Enables the Nougat package installer layout</string>
    <string name="package_installer_title">New package installer layout</string>
    <string name="slippery_navbar_title">Slippery navbar</string>
    <string name="panic_detection_title">Back button panic detection</string>
    <string name="panic_detection_timeout_title">Panic timeout</string>
    <string name="panic_detection_timeout_summary">Duration between the first and second tap for a button press to be considered multi-press</string>
    <string name="panic_detection_presses_title">Number of presses to trigger panic mode</string>
    <string name="back_press_voice_assist_title">Open voice assist on back long press</string>
</resources>